# markdown-hide-code

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: format.yml  lint.yml  publish_to_pypi.yml
src/markdown_hide_code/: __init__.py  main.py
tests/: test_main.py
