[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-hide-code"
authors = [{ name = "Martin Staadecker", email = "machstg@gmail.com" }]
description = "Hide code blocks from the rendered markdown output, useful for running tests on your documentation."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
]
dependencies = [
    "Markdown"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "I", "W292", "W291"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=scripts"

[tool.setuptools_scm]
version_file = "src/_version.py"
local_scheme = "no-local-version"

[project.urls]
repository = "https://github.com/staadecker/markdown-hide-code/"
Issues = "https://github.com/staadecker/markdown-hide-code/issues"